# TU-University-Tasks

./: .gitignore  LICENSE  README.md
C- PIK 1/: courseWork1Bzahov.c  output.txt
C- PIK 1/CourseWork 1/: a.out  courseWork1Bzahov.c  programOutput.txt  testInput.c
C- PIK I/: sss.c
C- PIK II/1.1/: 1.c  a.out  broiniSistemi.txt  logicalOperators.txt  task1.c
C- PIK II/2.1/: cycle.c  geom.c
C- PIK II/28.3/: a.out  weatherGen.c  weatherVer.c
C- PIK II/3.1/: a.out  array.c  asdsad.c
C- PIK II/4.1/: a.out  task1.c  task2.c  task3.c
C- PIK II/Course Work/: courseWorkBZ.c
C- PIK II/Exam/: exam_malloc.c
MastersTasks/: readme.md
OIP I(Еngineering design) /: BzahovCanvas2D.html
Parallel Programming/: Bzahov_PPR_AsyncTask_KP.docx  Readme.md
Program Technologies for Secure Code(PTSK)/: Readme.md
Programming Languages(PE) C++/: PE.cpp  ReturnRef.cpp  test.cpp
Programming Languages(PE) C++/TaxiRouteSystem/: CMakeLists.txt  includes.h
Programming Languages(PE) C++/TaxiRouteSystem/exceptions/: InvalidInputException.cpp  InvalidInputException.h
Programming Languages(PE) C++/TaxiRouteSystem/model/Point/: Point.cpp  Point.h
Programming Languages(PE) C++/TaxiRouteSystem/model/Route/: Route.cpp  Route.h
Programming Languages(PE) C++/TaxiRouteSystem/model/Taxi/: Taxi.cpp  Taxi.h
Programming Languages(PE) C++/TaxiRouteSystem/model/car/: Car.cpp  Car.h
Programming Languages(PE) C++/TaxiRouteSystem/model/serializable/: Serializable.cpp  Serializable.h
System Programming C/: mainNew.c
System Programming C/MultiThreadSortProject/: CMakeLists.txt  MainProgram.cpp  README.md  a.out  input.txt
System Programming C/MultiThreadSortProject/Algorithms/ParallelMergeSort/: MergeSort.cpp  MergeSort.h
System Programming C/MultiThreadSortProject/Algorithms/ParallelQuickSort/: ParralellQuickSort.cpp  ParralellQuickSort.h
System Programming C/MultiThreadSortProject/Utils/: FileUtils.h  ReadFromFile.cpp  SplitFunctions.cpp  SplitFunctions.h
(+124 files in other folders)
